--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version> <!-- Ensure you use the latest stable version -->
         </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
